--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <div class="wrapper">
     <div class="space"></div>
     <div class="header">
-        <img src="logo.png" height="400px" id="logo">
+        <img src="images/logo.png" height="400px" id="logo">
 
         <nav>
             <a href="#section_01"><p id="nav_section_01">About Us</p></a>
@@ -191,7 +191,7 @@
     <div id="section_01"><br>
         <h1 class="story">It All Happened In A Day...</h1>
         <br>
-        <img src="quote.jpg" height="400px" id="quote">
+        <img src="images/quote.jpg" height="400px" id="quote">
 
         <p> As I sit here writing this it all seems so surreal that it has finally happened. WE OPENED THE MINISTRY!! To
             be honest, I really didn’t have to wait that long. Now to come to the point to have the idea that’s another
@@ -222,21 +222,21 @@
     <div id="section_03"><br>
         <br><table style="width:85%">
             <tr>
-                <th><a href="tel:8167852397"><img src="phone.png" height="115"></a></th>
+                <th><a href="tel:8167852397"><img src="images/phone.png" height="115"></a></th>
                 <th><a href="tel:8167852397" class="contact">(816) 785-2397</a></th>
             </tr>
             <tr>
 
-                <th><a href="mailto:heather.armstrong@lordsarmyministries.com" target="_top"><img src="email.png" height="115"></a></th>
+                <th><a href="mailto:heather.armstrong@lordsarmyministries.com" target="_top"><img src="images/email.png" height="115"></a></th>
                 <th><a href="mailto:heather.armstrong@lordsarmyministries.com" target="_top" class="contact">heather.armstrong@lordsarmyministries.com</a></th>
 
             </tr>
             <tr>
-                <th><a href="https://www.facebook.com/LordsArmyMinistries4you/" target="_blank"><img src="fb.png" height="115"></a></th>
+                <th><a href="https://www.facebook.com/LordsArmyMinistries4you/" target="_blank"><img src="images/fb.png" height="115"></a></th>
                 <th><a href="https://www.facebook.com/LordsArmyMinistries4you/" target="_blank" class="contact">/LordsArmyMinistries4you</a></th>
             </tr>
             <tr>
-                <th><a href="https://www.instagram.com/lordsarmyministries/" target="_blank"><img src="icon.png" height="115"></a></th>
+                <th><a href="https://www.instagram.com/lordsarmyministries/" target="_blank"><img src="images/icon.png" height="115"></a></th>
                 <th><a href="https://www.instagram.com/lordsarmyministries/" target="_blank" class="contact">@LordsArmyMinistries</a></a></th>
             </tr>
 
