--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         #section_04 {
             width: 100%;
             height: 70px;
-            background-color: #000000;
-            color: white;
+            background-color: #ffffff;
+            color: #000000;
             margin: 0 auto;
             position: relative;
             text-align: center;
@@ -244,10 +244,13 @@
 
     </div>
 </div>
+
+<hr>
 <div id="section_04">
     <br>
     Website Design by Hannah Salamone
 </div>
+<hr>
 
 
 
