--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Lord's Army Ministries</title>
@@ -110,7 +110,7 @@
             position: relative;
         }
 
-        #section_04 {
+        footer {
             width: 100%;
             height: 70px;
             background-color: #000000;
@@ -244,10 +244,10 @@
 
     </div>
 </div>
-<div id="section_04">
+<footer>
     <br>
     Website Design by Hannah Salamone
-</div>
+</footer>
 
 
 
