--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background-color: white;
+            background-color: #000000;
         }
 
         .space {
@@ -29,10 +29,10 @@
         }
 
         .wrapper {
-            width: 1200px;
+            width: auto;
 
             background-color: white;
-            position: relative;
+            position: center;
             margin: 0 auto;
         }
 
