--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         .header {
-            width: 1200px;
+            width: 90%;
             height: 650px;
             position: relative;
             margin: 0 auto;
@@ -42,7 +42,7 @@
         }
 
         nav {
-            width: 1180px;
+            width: 90%;
             height: 100px;
             background-color: white;
             color: darkgrey;
@@ -82,7 +82,7 @@
         }
 
         #section_01 {
-            width: 1120px;
+            width: 90%;
             height: 840px;
             background-color: white;
             color: black;
@@ -91,7 +91,7 @@
         }
 
         #section_03 {
-            width: 1120px;
+            width: 90%;
             height: 570px;
             background-color: white;
             color: black;
@@ -99,7 +99,7 @@
         }
 
         #section_02 {
-            width: 1120px;
+            width: 90%;
             height: 620px;
             background-color: white;
             color: black;
