--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
             margin: 0 auto;
             display: block;
             border-spacing: 50px 0;
+
         }
 
         th {
@@ -212,7 +213,7 @@
        <br> </div><hr>
     <div id="section_02"><br>
         <h1 class="story">Pantry Box Locations</h1>
-        <br><iframe src="https://www.google.com/maps/d/u/0/embed?mid=1yOhuA39oC0sQcm-YlcufQ0zOGGvCOgN6" width="1000" height="500" class="location"></iframe>
+        <br><iframe src="https://www.google.com/maps/d/u/0/embed?mid=1yOhuA39oC0sQcm-YlcufQ0zOGGvCOgN6" width="90%" height="500" class="location"></iframe>
         <br>
     </div>
     <hr>
