--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         #section_01 {
             width: 90%;
-            height: 840px;
+
             background-color: white;
             color: black;
             margin: 0 auto;
@@ -92,7 +92,7 @@
 
         #section_03 {
             width: 90%;
-            height: 570px;
+
             background-color: white;
             color: black;
             margin: 0 auto;
@@ -100,7 +100,7 @@
 
         #section_02 {
             width: 90%;
-            height: 620px;
+
             background-color: white;
             color: black;
             margin: 0 auto;
@@ -238,7 +238,7 @@
                 <th><a href="https://www.instagram.com/lordsarmyministries/" target="_blank" class="contact">@LordsArmyMinistries</a></a></th>
             </tr>
 
-        </table>
+        </table> <br>
 
     </div>
 </div>
