--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         table{
             margin: 0 auto;
             display: block;
+            width: 90%;
             border-spacing: 50px 0;
 
         }
